# leptos-hot-reload-repro

./: .dockerignore  .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: lib.rs
frontend/: Cargo.toml
server/: Cargo.toml
server/src/: file_serve.rs  main.rs
style/: main.css
