[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = {workspace = true, optional = true}

cfg-if.workspace = true
thiserror.workspace = true
http.workspace = true

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "leptos_axum"]