[package]
name = "kleio"
version = "0.1.0"
edition = "2021"

[dependencies]
app = { path = "../app", features = ["ssr"] }
leptos = { workspace = true, features = ["ssr", "tracing"] }
leptos_axum = { workspace = true }

anyhow.workspace = true
axum.workspace = true 
http.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true 
tower-http.workspace = true 
tower.workspace = true 